--- a/BROWSER.html
+++ b/BROWSER.html
@@ -7,7 +7,7 @@ BROWSER
 </title>
 </head>
 <body>
-<h1> Chrome </h1>
+<h1><center>Chrome </center></h1>
 <p>
 <em>
 Google Chrome is a web browser developed by Google, known for its speed, security features, and integration with other Google services. It's available on various operating systems like Windows, macOS, Linux, Android, and iOS. Chrome offers features like a built-in password manager, autofill, and safety checks to enhance the browsing experience. It also supports extensions and apps, allowing users to customize and extend its functionality.
